[package]
name = "lookup-table"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
ark-std = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = "0.5.0"
itertools = "0.13.0"
rayon = "1.10.0"
ark-bn254 = "0.5.0"
ark-relations = "0.5.0"
ark-pallas = "0.5.0"
ark-r1cs-std = "0.5.0"
